--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "dev": "nodemon index.js",
-     "build": "npm i"
-    
+    "dev": "nodemon index.js",
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
     "razorpay": "^2.9.2"
   }
 }
