--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,3 @@
 
-RAZOR_PAY_API_SECRET_KEY = "0PocGzg4zJLdqCUrfGuKqUQ"
 
-RAZOR_PAY_KEY = "rzp_test_5AI1hcWWmUdOL4"
+BASE_URL = "https://mern-3-14kt.onrender.com"
