--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,7 @@
 
 
-export const BASE_URL = "https://mern-3-14kt.onrender.com"
+
+RAZOEPAY_KEY = "rzp_test_5AI1hcWWmUdOL4"
+RAZORPAY_SECRET_KEY = "0PocGzg4zJLdqCUrfGuKqUQc" 
+
+# export const BASE_URL = "https://mern-3-14kt.onrender.com"
