--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
-    "stripe": "^14.23.0"
+    "stripe": "^14.23.0",
+    "validator": "^13.11.0"
   }
 }
