--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "razorpay": "^2.9.2",
     "stripe": "^14.23.0",
     "validator": "^13.11.0"
