--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.2.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
